--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,5 @@ board = esp01
 framework = arduino
 lib_deps =
   # Using a library name
-  CMMC MQTT Connector
-  ArduinoJson
+  PubSubClient
+  DHT
