--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "terminal.integrated.env.linux": {
-        "PATH": "/home/martino/.platformio/penv/bin:/home/martino/.platformio/penv:/home/martino/.cargo/bin:/home/martino/bin:/home/martino/.local/bin:/home/martino/.cargo/bin:/home/martino/bin:/home/martino/.local/bin:/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games",
+        "PATH": "/home/martino/.platformio/penv/bin:/home/martino/.platformio/penv:/home/martino/.cargo/bin:/home/martino/bin:/home/martino/.local/bin:/usr/local/bin:/usr/bin:/bin:/usr/local/games:/usr/games",
         "PLATFORMIO_CALLER": "vscode"
     },
     "files.associations": {
         "array": "cpp",
-        "initializer_list": "cpp"
+        "initializer_list": "cpp",
+        "functional": "cpp",
+        "type_traits": "cpp"
     }
 }
